--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5c6cd05",
+   "id": "3c28d4ef",
    "metadata": {},
    "source": [
     "### Income Portfolio\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0cc241",
+   "id": "6aea458a",
    "metadata": {},
    "source": [
     "#### Income Portfolio Investment Code"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "77c81f6b",
+   "id": "8855dd01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,10 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "40161380",
+   "execution_count": 130,
+   "id": "a7e066ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sell'"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "invest_income('ROKU')"
    ]
@@ -106,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5cb3f740",
+   "id": "3176e7f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c4fd94f9",
+   "id": "a5bf1a10",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "6454419c",
+   "id": "4ffb0bfd",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "10d12000",
+   "id": "22cc6290",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "d85179a3",
+   "id": "46176f1a",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c4e33b76",
+   "id": "0865f8b1",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e52f70b6",
+   "id": "0fbd8a92",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "82a4b8b7",
+   "id": "adefd3f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8f3e2590",
+   "id": "6baa7d06",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f9f6a097",
+   "id": "9b3d677c",
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ad5aaaeb",
+   "id": "11600a42",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b96ffcd",
+   "id": "0a1f206a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1228,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "394b3baa",
+   "id": "cfebb46d",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1023051b",
+   "id": "3ace9a3d",
    "metadata": {},
    "outputs": [
     {
