feat: income portfolio done

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -27,7 +27,7 @@
     "### Income Portfolio\n",
     "For our income portfolio, we are interested two major properties: stability and yield. We want this to be something we can live off of without much effort in maintaining the portfolio itself (passive income). To accomplish this, we will employ the following strategy:\n",
     "\n",
-    "1. **HOLD all assets in this portolio:** We should choose ssets that we never have to sell as one of our major criteria is low maintenance.\n",
+    "1. **HOLD all assets in this portolio:** We should choose assets that we never have to sell as one of our major criteria is low maintenance.\n",
     "\n",
     "2. **Prioritize assets with high dividend yield:** This is fairly straightforward, as we want to earn as much income via dividends per dollar invested. We don't want to overly prioritize this though, as we want to make sure the asset is healthy (recall criteria number 1).\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "id": "8855dd01",
    "metadata": {},
    "outputs": [],
@@ -80,8 +80,11 @@
     "        if (dividend_rate > 0.5 and market_cap > 2e8):\n",
     "            weight *= 1.5\n",
     "            \n",
+    "    beta = 1 if ticker_info.get('beta') is None else ticker_info.get('beta')\n",
+    "    if (beta > 1):\n",
+    "        weight *= 0.8\n",
+    "            \n",
     "    cashflow = ticker_data.cashflow\n",
-    "    \n",
     "    if (len(cashflow) > 0):\n",
     "        net_income = cashflow.loc[['Net Income']].values[0][0]\n",
     "        if (net_income is not None and net_income > 1e10):\n",
@@ -94,24 +97,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce668070",
+   "metadata": {},
+   "source": [
+    "#### Code Breakdown\n",
+    "Notice that our code above handles ETFs and normal stocks (Equity) slightly differently. ETFs by default get a higher weight boost, as they are typically safer since they are a basket of stocks rather than any individual stock. Furthermore, there is an additional weight boost for ETFs if the trailing dividend yield is over 0.01 and average volume is over 5 million. The dividend yield is part of our goal criteria, and we only weight it up if average volume is high enough to screen out more volatile stocks that may pay high dividends but with less stability/consistency.\n",
+    "\n",
+    "For normal stocks (Equity), we weight companies in the financial services or technology sectors higher by default. This is qualitatively built on the fact that financial service and technology companies serve as the core infrastructure for lots of other companies, and are thus more reliable. Similar to ETFs, we try to screen out volatile stocks by requiring a market cap greater than 200 million. Furthermore, we require a dividend rate of 0.5 for increasing weight for these stocks, ensuring we get decent income.\n",
+    "\n",
+    "Finally, as another volatility check, decrease weight if beta is too high, as anything over 1 indicates the asset is more volatile than the market itself. We also do a net income check on the cashflow statement in order to make sure assets with high net income make the cut. We also always choose to hold instead of just buying for short-term trading purposes, as we want this to be a low maintenance portfolio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b0e1e16",
+   "metadata": {},
+   "source": [
+    "#### Example Assets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
+   "id": "f65860fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vanguard 500 Index Fund ETF: hold\n",
+      "JPMorgan Chase & Co: hold\n",
+      "Bank of America Corp: hold\n",
+      "Intel Corporation: hold\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Vanguard 500 Index Fund ETF: {invest_income('VOO')}\")\n",
+    "print(f\"JPMorgan Chase & Co: {invest_income('JPM')}\")\n",
+    "print(f\"Bank of America Corp: {invest_income('BAC')}\")\n",
+    "print(f\"Intel Corporation: {invest_income('INTC')}\")\n",
+    "\n",
+    "print(f\"Tesla Inc: {invest_income('TSLA')}\")\n",
+    "print(f\"BioNano Genomics Inc: {invest_income('BNGO')}\")\n",
+    "print(f\"Roku, Inc: {invest_income('ROKU')}\")\n",
+    "print(f\"FuelCell Energy Inc: {invest_income('FCEL')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb50e2b3",
+   "metadata": {},
+   "source": [
+    "Notice how for the assets above, more stable high-dividend assets receive a HOLD action whereas more volatile risky assets receive a SELL action."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05f0c84c",
+   "metadata": {},
+   "source": [
+    "### ESG Portfolio\n",
+    "For our ESG portfolio, we want more"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6c9088",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "724a6d46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a7e066ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sell'"
+       "'hold'"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "invest_income('ROKU')"
+    "invest_income('JPM')"
    ]
   },
   {
