feat: add files

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "912c6f00",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "8855dd01",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
     "        market_cap = ticker_info.get('marketCap')\n",
     "        \n",
     "        if (sector == 'Financial Services' or sector == 'Technology'):\n",
-    "            weight *= 1.1\n",
+    "            weight *= 1.2\n",
     "        if (dividend_rate > 0.5 and market_cap > 2e8):\n",
     "            weight *= 1.5\n",
     "            \n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465017cf",
+   "id": "832691cd",
    "metadata": {},
    "source": [
     "#### Code Breakdown\n",
@@ -106,12 +106,12 @@
     "\n",
     "For normal stocks (Equity), we weight companies in the financial services or technology sectors higher by default. This is qualitatively built on the fact that financial service and technology companies serve as the core infrastructure for lots of other companies, and are thus more reliable. Similar to ETFs, we try to screen out volatile stocks by requiring a market cap greater than 200 million. Furthermore, we require a dividend rate of 0.5 for increasing weight for these stocks, ensuring we get decent income.\n",
     "\n",
-    "Finally, as another volatility check, decrease weight if beta is too high, as anything over 1 indicates the asset is more volatile than the market itself. We also do a net income check on the cashflow statement in order to make sure assets with high net income make the cut. We also always choose to hold instead of just buying for short-term trading purposes, as we want this to be a low maintenance portfolio."
+    "Finally, as another volatility check, we decrease weight if beta is too high, as anything over 1 indicates the asset is more volatile than the market itself. We also do a net income check on the cashflow statement in order to make sure assets with high net income make the cut. We also always choose to hold instead of just buying for short-term trading purposes, as we want this to be a low maintenance portfolio."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "98b2de8f",
+   "id": "923d84b8",
    "metadata": {},
    "source": [
     "#### Example Assets"
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "0f08ca96",
+   "execution_count": 3,
+   "id": "635b2475",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,6 @@
     "print(f\"JPMorgan Chase & Co: {invest_income('JPM')}\")\n",
     "print(f\"Bank of America Corp: {invest_income('BAC')}\")\n",
     "print(f\"Intel Corporation: {invest_income('INTC')}\")\n",
-    "\n",
     "print(f\"Tesla Inc: {invest_income('TSLA')}\")\n",
     "print(f\"BioNano Genomics Inc: {invest_income('BNGO')}\")\n",
     "print(f\"Roku, Inc: {invest_income('ROKU')}\")\n",
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3696fb06",
+   "id": "d254daf6",
    "metadata": {},
    "source": [
     "Notice how for the assets above, more stable high-dividend assets receive a HOLD action whereas more volatile risky assets receive a SELL action."
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f997059",
+   "id": "177c41de",
    "metadata": {},
    "source": [
     "### ESG Portfolio\n",
@@ -169,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "f87c65bc",
+   "execution_count": 4,
+   "id": "3dc6b5f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b54bd71d",
+   "id": "b6dbfa41",
    "metadata": {},
    "source": [
     "#### Code Breakdown\n",
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a7aa8a",
+   "id": "7912d7b9",
    "metadata": {},
    "source": [
     "#### Example Assets"
@@ -234,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "229c1e63",
+   "execution_count": 5,
+   "id": "98a1b9f5",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c0807e",
+   "id": "0970faa4",
    "metadata": {},
    "source": [
     "We see from the example assets above that we get a decent balance of ESG and profitabiliy here. Strong assets like ACN, TSLA, XYL, and CRM make the buy/hold cut whereas other more volatile and less ESG-friendly stocks like VALE don't make the cut."
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ccd8c04",
+   "id": "a572c9de",
    "metadata": {},
    "source": [
     "### Growth Portfolio\n",
@@ -284,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "1a7b3d28",
+   "execution_count": 11,
+   "id": "0bb65757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +302,8 @@
     "    sector_set = { 'Diagnostics & Research', 'Technology' }\n",
     "    if (sector not in sector_set):\n",
     "        weight *= 0.75\n",
+    "    else:\n",
+    "        weight *= 1.5\n",
     "        \n",
     "    average_vol = ticker_info.get('averageVolume')\n",
     "    if (average_vol > 5e6):\n",
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f74806d8",
+   "id": "38ac9b8f",
    "metadata": {},
    "source": [
     "#### Example Assets"
@@ -338,18 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "42ab6462",
+   "execution_count": 13,
+   "id": "d6c936c5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fastly Inc: buy\n",
+      "Fastly Inc: hold\n",
       "Datadog Inc: hold\n",
-      "BioNano Genomics Inc: sell\n",
-      "Unity Software Inc: buy\n",
+      "Unity Software Inc: hold\n",
       "Meta Platforms Inc: hold\n",
       "Deere & Company: sell\n",
       "Walmart: sell\n",
@@ -360,7 +360,6 @@
    "source": [
     "print(f\"Fastly Inc: {invest_growth('FSLY')}\")\n",
     "print(f\"Datadog Inc: {invest_growth('DDOG')}\")\n",
-    "print(f\"BioNano Genomics Inc: {invest_growth('BNGO')}\")\n",
     "print(f\"Unity Software Inc: {invest_growth('U')}\")\n",
     "print(f\"Meta Platforms Inc: {invest_growth('FB')}\")\n",
     "\n",
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd2407f",
+   "id": "d7e0ec4b",
    "metadata": {},
    "source": [
     "From the example assets above, we see that small to mid-cap stocks meet the buy/hold criteria more frequently than larger more established companies like Meta and Walmart. This makes sense since we are looking for pretty aggressive growth with this strategy, which means larger assets that have already peaked in growth rate might not make the cut."
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c7a13ee",
+   "id": "b7dfbca3",
    "metadata": {},
    "source": [
     "### Invest Implementation"
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e19d13",
+   "id": "eb73ad93",
    "metadata": {},
    "source": [
     "My invest implementation is a simple wrapper around the three strategies discussed in the portfolio types above. By default, if no client type is passed then it uses the income portfolio investment strategy (as it is a much more safe default than the others)."
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e840c301",
    "metadata": {},
    "outputs": [],
