feat: feature list

--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -27,53 +27,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "405b9f8a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class agent:\n",
-    "    '''Class for agents who have goals.'''\n",
-    "\n",
     "    count = 0\n",
     "    agents = []\n",
     "\n",
     "    def __init__(self, name):\n",
-    "        ''' Constructor for agent with name.'''\n",
     "        self.name = name\n",
     "        self.goals = []\n",
     "        self.count = agent.count\n",
     "        agent.count += 1\n",
     "        agent.agents.append(self)\n",
     "\n",
-    "\n",
     "    def __repr__(self):\n",
-    "        ''' Print out agent so that it can evaluate to itself.'''\n",
     "        return f\"agent({self.name!r})\"\n",
     "\n",
     "    def __str__(self):\n",
-    "        '''Return agent as a string.'''\n",
     "        return f\"<agent. name: {self.name} ({self.count})>\"\n",
     "\n",
     "    def add_goal(self, goal):\n",
-    "        '''Add goals (stances) without duplicates.'''\n",
     "        if not goal in self.goals:\n",
     "            self.goals.append(goal)\n",
     "\n",
     "    def pp(self):\n",
-    "        '''Pretty print agent information.'''\n",
     "        result = f\"Name:\\t{self.name}\"\n",
     "        if self.goals:\n",
     "            result += f\"\\nGoals:\\t{self.goals}\"\n",
     "        return result\n",
     "\n",
-    "\n",
     "    def __eq__(self, other):\n",
-    "        ''' Overload == operator.  Are two agents equal by name and goals? '''\n",
     "        return self.name == other.name and sorted(self.goals) == sorted(other.goals) \n",
     "\n",
     "    def copy(self):\n",
-    "        ''' Clone the agent, including name, and goals. '''\n",
     "        newagent = agent(self.name)\n",
     "        newagent.goals = self.goals[:]\n",
     "        return newagent"
@@ -84,13 +73,270 @@
    "id": "3444bef8",
    "metadata": {},
    "source": [
-    "## "
+    "### Feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ef363d",
+   "metadata": {},
+   "source": [
+    "This is equivalent to the issue class in the Goals notebook provided on the assignment website. We just rename it to features here given the context of the problem (choosing what computer to buy)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "38c5ee7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class feature:\n",
+    "    count = 0\n",
+    "    features = {}\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name.upper()\n",
+    "        if self.name not in feature.features:\n",
+    "            self.count = feature.count\n",
+    "            feature.count += 1\n",
+    "            feature.features[self.name] = self\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'feature({self.name!r})'\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"<feature ({self.count}): {self.name}>\"\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.name == other.name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc50111",
+   "metadata": {},
+   "source": [
+    "### Stance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0d622189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class stance:\n",
+    "    count = 0\n",
+    "    stances = []\n",
+    "\n",
+    "    def __init__(self, featurename, side='pro', importance='A'):\n",
+    "        if not featurename.upper() in feature.features:\n",
+    "            feature(featurename)\n",
+    "        self.feature = feature.features[featurename.upper()]\n",
+    "        self.side = side.upper()\n",
+    "        self.importance = importance.upper()\n",
+    "        self.count = stance.count\n",
+    "        stance.count += 1\n",
+    "        stance.stances.append(self)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'stance({self.feature.name!r}, {self.side!r}, {self.importance!r})'\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"<stance ({self.count}): {self.feature.name} [{self.side}:{self.importance}]>\"\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.feature == other.feature and self.side == other.side\n",
+    "\n",
+    "    def copy(self):\n",
+    "        return stance(self.feature.name, self.side, self.importance)\n",
+    "\n",
+    "    def __hash__(self):\n",
+    "        return hash((self.feature.name, self.side))  \n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        return self.feature.name + self.side < other.feature.name + other.side"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f3359dc",
+   "metadata": {},
+   "source": [
+    "## 1. Define a Device Class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c151502",
+   "metadata": {},
+   "source": [
+    "As instructed by the spec, our device class must contain instances of a feature class. Our device class is a very lightweight class that stores the number of features, and the features themselves in instance variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9455f300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class device:\n",
+    "    count = 0\n",
+    "    features = []\n",
+    "    \n",
+    "    def __init__(self, features):\n",
+    "        self.count += len(features)\n",
+    "        self.features = features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2c29610",
+   "metadata": {},
+   "source": [
+    "## 2. Define Some Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "825aeb73",
+   "metadata": {},
+   "source": [
+    "Before we go on to create agents with different feature stances, we should define some features first so we have an idea of what features we are looking at to begin with. I looked up a few cool laptops on YouTube mostly from [Dave2D's channel](https://www.youtube.com/c/Dave2D) for inspiration, and created the following groups of feature sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "20a623a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "feature('PRICE:HIGH')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# operating system\n",
+    "feature(\"OS:MACOS\")\n",
+    "feature(\"OS:WINDOWS\")\n",
+    "feature(\"OS:LINUX\")\n",
+    "\n",
+    "# CPU Cores\n",
+    "feature(\"CPU:CORES:2\")\n",
+    "feature(\"CPU:CORES:4\")\n",
+    "feature(\"CPU:CORES:6\")\n",
+    "feature(\"CPU:CORES:8\")\n",
+    "\n",
+    "# CPU manufacturer\n",
+    "feature(\"CPU:MANUFACTURER:AMD\")\n",
+    "feature(\"CPU:MANUFACTURER:INTEL\")\n",
+    "\n",
+    "# webcam\n",
+    "feature(\"WEBCAM:BUILT_IN\")\n",
+    "feature(\"WEBCAM:QUALITY:480p\")\n",
+    "feature(\"WEBCAM:QUALITY:720p\")\n",
+    "feature(\"WEBCAM:QUALITY:1080p\")\n",
+    "\n",
+    "# RAM\n",
+    "feature(\"RAM:SIZE:8\")\n",
+    "feature(\"RAM:SIZE:16\")\n",
+    "feature(\"RAM:SIZE:32\")\n",
+    "feature(\"RAM:SIZE:64\")\n",
+    "\n",
+    "# size\n",
+    "feature(\"SIZE:13\")\n",
+    "feature(\"SIZE:14\")\n",
+    "feature(\"SIZE:15\")\n",
+    "feature(\"SIZE:16\")\n",
+    "feature(\"SIZE:17\")\n",
+    "\n",
+    "# display resolution\n",
+    "feature(\"DISPLAY:RESOLUTION:HD\")\n",
+    "feature(\"DISPLAY:RESOLUTION:FULL_HD\")\n",
+    "feature(\"DISPLAY:RESOLUTION:RETINA\")\n",
+    "feature(\"DISPLAY:RESOLUTION:QHD\")\n",
+    "feature(\"DISPLAY:RESOLUTION:QHD+\")\n",
+    "feature(\"DISPLAY:RESOLUTION:UHD\")\n",
+    "\n",
+    "# display type\n",
+    "feature(\"DISPLAY:TYPE:GLOSSY\")\n",
+    "feature(\"DISPLAY:TYPE:MATTE\")\n",
+    "\n",
+    "# touch screen\n",
+    "feature(\"DISPLAY:TOUCH\")\n",
+    "\n",
+    "# keyboard\n",
+    "feature(\"KEYBOARD:TKL\")\n",
+    "feature(\"KEYBOARD:SWITCH:LOW_PROFILE\")\n",
+    "feature(\"KEYBOARD:SWITCH:BUTTERFLY\")\n",
+    "feature(\"KEYBOARD:SWITCH:MECHANICAL\")\n",
+    "feature(\"KEYBOARD:SWITCH:OPTICAL\")\n",
+    "feature(\"KEYBOARD:SWITCH:TACTILE\")\n",
+    "\n",
+    "# chassis color\n",
+    "feature(\"CHASSIS:COLOR:WHITE\")\n",
+    "feature(\"CHASSIS:COLOR:BLACK\")\n",
+    "feature(\"CHASSIS:COLOR:GRAY\")\n",
+    "feature(\"CHASSIS:COLOR:RED\")\n",
+    "feature(\"CHASSIS:COLOR:BLUE\")\n",
+    "feature(\"CHASSIS:COLOR:GREEN\")\n",
+    "\n",
+    "# brand\n",
+    "feature(\"BRAND:APPLE\")\n",
+    "feature(\"BRAND:LENOVO\")\n",
+    "feature(\"BRAND:ALIENWARE\")\n",
+    "feature(\"BRAND:MSI\")\n",
+    "feature(\"BRAND:ASUS\")\n",
+    "\n",
+    "# lighting\n",
+    "feature(\"LIGHTING:KEYBOARD:RGB\")\n",
+    "feature(\"LIGHTING:KEYBOARD:BACKLIGHT\")\n",
+    "feature(\"LIGHTING:CHASSIS:RGB\")\n",
+    "\n",
+    "# price\n",
+    "feature(\"PRICE:LOW\") # $800 or below\n",
+    "feature(\"PRICE:MID\") # $800-$1600\n",
+    "feature(\"PRICE:HIGH\") # $1600 or above"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38c5ee7f",
+   "id": "2b69b6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dbfccc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e5d2c47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5066eca4",
    "metadata": {},
    "outputs": [],
    "source": []
