feat: goal inference

--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -19,58 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0360d831",
-   "metadata": {},
-   "source": [
-    "### Agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "405b9f8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class agent:\n",
-    "    count = 0\n",
-    "    agents = []\n",
-    "\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        self.goals = []\n",
-    "        self.count = agent.count\n",
-    "        agent.count += 1\n",
-    "        agent.agents.append(self)\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"agent({self.name!r})\"\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f\"<agent. name: {self.name} ({self.count})>\"\n",
-    "\n",
-    "    def add_goal(self, goal):\n",
-    "        if not goal in self.goals:\n",
-    "            self.goals.append(goal)\n",
-    "\n",
-    "    def pp(self):\n",
-    "        result = f\"Name:\\t{self.name}\"\n",
-    "        if self.goals:\n",
-    "            result += f\"\\nGoals:\\t{self.goals}\"\n",
-    "        return result\n",
-    "\n",
-    "    def __eq__(self, other):\n",
-    "        return self.name == other.name and sorted(self.goals) == sorted(other.goals) \n",
-    "\n",
-    "    def copy(self):\n",
-    "        newagent = agent(self.name)\n",
-    "        newagent.goals = self.goals[:]\n",
-    "        return newagent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3444bef8",
+   "id": "4f5c5206",
    "metadata": {},
    "source": [
     "### Feature"
@@ -78,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ef363d",
+   "id": "123ff279",
    "metadata": {},
    "source": [
     "This is equivalent to the issue class in the Goals notebook provided on the assignment website. We just rename it to features here given the context of the problem (choosing what computer to buy)."
@@ -86,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "38c5ee7f",
+   "execution_count": 35,
+   "id": "30227a56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fc50111",
+   "id": "a80d75fd",
    "metadata": {},
    "source": [
     "### Stance"
@@ -122,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0d622189",
+   "execution_count": 36,
+   "id": "7583dad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +111,99 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3359dc",
+   "id": "0360d831",
+   "metadata": {},
+   "source": [
+    "### Agent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f630b83",
+   "metadata": {},
+   "source": [
+    "I've modified the agent class slightly to also store stances in addition to goals as the spec asks for. Stances are not directly added to the agent at the top level. I added an `infer_stances_from_goals` method that populates stances from the goals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "405b9f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class agent:\n",
+    "    count = 0\n",
+    "    agents = []\n",
+    "    stances = []\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.goals = []\n",
+    "        self.count = agent.count\n",
+    "        agent.count += 1\n",
+    "        agent.agents.append(self)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"agent({self.name!r})\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"<agent. name: {self.name} ({self.count})>\"\n",
+    "\n",
+    "    def add_goal(self, goal):\n",
+    "        if not goal in self.goals:\n",
+    "            self.goals.append(goal)\n",
+    "            \n",
+    "    def infer_stances_from_goals(self):\n",
+    "        stances_to_add = []\n",
+    "        for goal in self.goals:\n",
+    "            if \"gaming\" in goal:\n",
+    "                stances_to_add.push(stance(\"OS:WINDOWS\", 'pro', 'A'))\n",
+    "                stances_to_add.push(stance(\"CPU:MANUFACTURER:AMD\", 'pro', 'A'))\n",
+    "                stances_to_add.push(stance(\"CPU:CORES:8\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"KEYBOARD:SWITCH:MECHANICAL\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"KEYBOARD:SWITCH:MECHANICAL\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"LIGHTING:KEYBOARD:RGB\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"RAM:SIZE:32\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"BRAND:APPLE\", 'con', 'A'))\n",
+    "                \n",
+    "            if \"coding\" in goal:\n",
+    "                stances_to_add.push(stance(\"OS:MACOS\", 'pro', 'A'))\n",
+    "                stances_to_add.push(stance(\"OS:LINUX\", 'pro', 'A'))\n",
+    "                stances_to_add.push(stance(\"OS:MACOS\", 'pro', 'A'))\n",
+    "                stances_to_add.push(stance(\"DISPLAY:RESOLUTION:RETINA\", 'pro', 'B'))\n",
+    "                \n",
+    "            if \"productivity\" in goal or \"work\" in goal:\n",
+    "                stances_to_add.push(stance(\"OS:MACOS\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"DISPLAY:RESOLUTION:RETINA\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"WEBCAM:QUALITY:720p\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"WEBCAM:QUALITY:1080p\", 'pro', 'B'))\n",
+    "                \n",
+    "            if \"affordable\" in goal:\n",
+    "                stances_to_add.push(stance(\"PRICE:HIGH\", 'con', 'B'))\n",
+    "                \n",
+    "            if \"portable\" in goal:\n",
+    "                stances_to_add.push(stance(\"SIZE:13\", 'pro', 'B'))\n",
+    "                stances_to_add.push(stance(\"SIZE:14\", 'pro', 'B'))\n",
+    "\n",
+    "    def pp(self):\n",
+    "        result = f\"Name:\\t{self.name}\"\n",
+    "        if self.goals:\n",
+    "            result += f\"\\nGoals:\\t{self.goals}\"\n",
+    "        return result\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return self.name == other.name and sorted(self.goals) == sorted(other.goals) \n",
+    "\n",
+    "    def copy(self):\n",
+    "        newagent = agent(self.name)\n",
+    "        newagent.goals = self.goals[:]\n",
+    "        return newagent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc9f1dff",
    "metadata": {},
    "source": [
     "## 1. Define a Device Class"
@@ -170,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c151502",
+   "id": "239fb3d0",
    "metadata": {},
    "source": [
     "As instructed by the spec, our device class must contain instances of a feature class. Our device class is a very lightweight class that stores the number of features, and the features themselves in instance variables."
@@ -178,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9455f300",
+   "execution_count": 41,
+   "id": "e3d3088e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,14 +228,15 @@
     "    count = 0\n",
     "    features = []\n",
     "    \n",
-    "    def __init__(self, features):\n",
+    "    def __init__(self, name, features):\n",
+    "        self.name = name\n",
     "        self.count += len(features)\n",
     "        self.features = features"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2c29610",
+   "id": "03f51169",
    "metadata": {},
    "source": [
     "## 2. Define Some Features"
@@ -202,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "825aeb73",
+   "id": "fe641f38",
    "metadata": {},
    "source": [
     "Before we go on to create agents with different feature stances, we should define some features first so we have an idea of what features we are looking at to begin with. I looked up a few cool laptops on YouTube mostly from [Dave2D's channel](https://www.youtube.com/c/Dave2D) for inspiration, and created the following groups of feature sets:"
@@ -210,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "20a623a2",
+   "execution_count": 42,
+   "id": "ed27b103",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +262,7 @@
        "feature('PRICE:HIGH')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,9 +352,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d3cbeef",
+   "metadata": {},
+   "source": [
+    "Now that we have defined a decent space of features, we can define agent instances with different stances by giving them different goals."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b69b6e9",
+   "id": "b01d9a4a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbfccc9",
+   "id": "6eee0bae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -328,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e5d2c47",
+   "id": "b3bada3c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -336,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5066eca4",
+   "id": "d77c23f1",
    "metadata": {},
    "outputs": [],
    "source": []
